# cli-tools

./: .gitignore  README.md  pyproject.toml
.copilot/: .ai-rules.md  ci.spec.md  ci.tasks.md  install.spec.md  install.steps.md  install.tasks.md  install.tests.md  teleport.spec.md  teleport.tasks.md  teleport.tests.md
.github/workflows/: ci.yml
scripts/: .keep  install-shell-snippet.ps1  install-shell-snippet.sh
src/cli_layer/: __init__.py  teleport_cli.py
src/cli_layer/install/: cli.py  manifest.py  profile.py
src/cli_layer/shell_snippets/: tp.bash  tp.bat  tp.fish  tp.ps1
src/core_lib/: __init__.py  logging.py
src/core_lib/common/: __init__.py  db.py  exceptions.py  metadata.py  platform.py  types.py  utils.py
src/core_lib/teleport/: __init__.py  actions.py  migrations.py  models.py  service.py
tests/: conftest.py
tests/integration/: test_cli_exit_codes.py  test_cli_exit_codes_and_contract.py  test_cli_output_contract.py  test_cli_pin.py  test_cli_previous.py  test_cli_resolve.py  test_cli_show.py  test_cli_unpin.py  test_shell_snippets.py
tests/integration/install/: test_concurrency.py  test_flags.py  test_idempotency.py  test_installer.py  test_uninstall.py
tests/shell/: test_bash_wrapper.sh
tests/unit/: test_bootstrap.py
tests/unit/core/common/: test_db.py  test_exceptions.py  test_metadata.py  test_platform.py  test_utils.py
tests/unit/core/teleport/: test_actions.py  test_migrations.py  test_models.py  test_service.py
tests/unit/install/: test_manifest.py  test_manifest_crud.py  test_profile.py
