[project]
name = "cli-tools"
version = "0.0.0"
description = "A small CLI toolset for pinning and jumping between filesystem paths."
requires-python = ">=3.12"
dependencies = [
	"rich",
	"typer",
	"pydantic",
	"portalocker",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "pytest-cov",
    "pylint>=4.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: unit tests (fast, no subprocess)",
    "integration: integration tests via subprocess",
    "shell: shell wrapper tests (Linux only)",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/core_lib", "src/cli_layer"]

[project.scripts]
tp-cli = "cli_layer.teleport_cli:main"
